fix text wrap on inner pages

--- a/src/css/commonStyles/innerPageStyle.css
+++ b/src/css/commonStyles/innerPageStyle.css
@@ -26,7 +26,6 @@ body {
 
 .title-section .content-wrapper {
   box-sizing: border-box;
-  width: 50%;
   padding: 17em 3.8125em 0;
 }
 
